# advent-of-code-2022

./: Makefile  pyproject.toml
advent/air_25_12/one/: __main__.py
advent/beacon_15_12/: interval.py  reader.py  sensor.py
advent/beacon_15_12/one/: __main__.py
advent/beacon_15_12/two/: __main__.py
advent/blizzard_24_12/: blizzard.py  blizzard_map.py  directions.py  path.py  reader.py
advent/blizzard_24_12/one/: __main__.py
advent/boiling_18_12/: cube.py  reader.py
advent/calorie_counting_12_01/: inventory.py
advent/camp_cleanup_12_04/: interval.py  reader.py
advent/cathode_ray_12_10/: cpu.py  crt.py  reader.py
advent/distress_signal_13_12/: packet.py  reader.py
advent/grove_20_12/: reader.py
advent/hill_12_12/: graph.py  height_map.py  reader.py
advent/minerals_19_12/: blueprint.py  factory.py  reader.py  strategy.py
advent/monkey_11_12/: monkey.py  reader.py
advent/monkey_21_12/: monkey.py  operation.py  reader.py  render.py
advent/monkey_map_22/: action.py  bareer.py  cube.py  direction.py  formation.py  map.py  player.py  reader.py
advent/no_space_left_12_07/: filesystem.py  token.py
advent/regolith_14_12/: field.py  formation.py  reader.py
advent/rock_paper_scissors_12_02/: game.py  move.py  outcome.py  reader.py
advent/rope_bridge_12_09/: motion.py  reader.py  segment.py
advent/rucksack_12_03/: reader.py  rucksack.py
advent/supply_stacks_12_05/: crate.py  move.py  reader.py
advent/treetop_house_12_08/: grid.py  reader.py  scenic.py  visibility.py
advent/tuning_trouble_12_06/: reader.py  signal.py
advent/unstable_diffusion_23_12/: game.py  point.py  reader.py
advent/volcano_16_12/: network.py  reader.py  valve.py
(+42 files in other folders)
