[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Sergey Ivanychev <sergeyivanychev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
typing-extensions = "^4.4.0"
tqdm = "^4.64.1"
more-itertools = "^9.0.0"
sortedcontainers = "^2.4.0"
frozendict = "^2.3.4"
sympy = "^1.11.1"
cytoolz = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pycln = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
